# my-gpa-calculator

./: .gitignore  README.md  launch.sh  main.py  pyproject.toml  requirements.txt
src/: app.py  classes.py  courseParser.py  main.py  storage.py  visualization.py
templates/: dashboard.html
