[project]
name = "gpa-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "plotly[express]>=6.7.0",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
]
